[gd_scene load_steps=6 format=3 uid="uid://fbt0v4278uuq"]

[ext_resource type="PackedScene" uid="uid://cmmv05bbjposs" path="res://Scenes/Prefabs/Entities/Objects/TrackPlatform.tscn" id="1_hledg"]
[ext_resource type="Texture2D" uid="uid://dfpbjnd1o5tig" path="res://Assets/Sprites/Tilesets/OnOffPlatform.png" id="2_i1uto"]
[ext_resource type="JSON" path="res://Assets/Sprites/Tilesets/OnOffPlatform.json" id="3_hij3n"]
[ext_resource type="Script" uid="uid://q45b31h6356r" path="res://Scripts/Classes/Components/OnOffSwitcher.gd" id="4_i1uto"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_owoli"]
resource_local_to_scene = true
size = Vector2(32, 8)

[node name="MovingPlatform" unique_id=285771311 instance=ExtResource("1_hledg")]

[node name="Sprite" parent="." index="0" unique_id=1840586283]
texture = ExtResource("2_i1uto")
region_rect = Rect2(0, 0, 24, 8)

[node name="ResourceSetter" parent="Sprite" index="0" unique_id=1692721610]
resource_json = ExtResource("3_hij3n")

[node name="CollisionShape2D" parent="." index="1" unique_id=1046612248]
shape = SubResource("RectangleShape2D_owoli")

[node name="OnOffSwitcher" type="Node" parent="." index="9" unique_id=2030972507]
script = ExtResource("4_i1uto")
metadata/_custom_type_script = "uid://q45b31h6356r"

[connection signal="switched_off" from="OnOffSwitcher" to="." method="turn_off"]
[connection signal="switched_on" from="OnOffSwitcher" to="." method="turn_on"]
